--- a/src/王小波语录.md
+++ b/src/王小波语录.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 王小波语录
-slug: my-first-awesome-post
+slug: my-second-awesome-post
 date: 2020-05-08 05:30
 status: publish
 author: songdc
