--- a/src/2020-05-08-王小波语录.md
+++ b/src/2020-05-08-王小波语录.md
@@ -124,4 +124,4 @@ excerpt: 王小波的一些语录。
 
 50.人活在世上、就是为了忍受摧残，一直到死。想明了这一点，一切都能泰然处之。
 
-![幽灵公主剧照](./images/Mononoke_Hime.jpg)
+![少年王小波](./images/wangxiaobo.jpeg)
